welcome.lessons.welcome.methods.slug.SlugHunting.scala.error
SlugHunting:12: error: expected class or object definition
def isFacingTrail():Boolean = {
^SlugHunting:25: error: Unmatched closing brace '}' ignored here
}
^